--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="row">
                 <div class="col">
                     <div class="title">
-                        <h1 class="title__bio ">Nestor Canal</h1>
+                        <h2 class="title__bio ">Nestor Canal</h2>
                         <h1 class="title__bio2 d-flex ml-5">Desarrollador</h1>
 
                     </div>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="col d-flex justify-content-center">
-                    <img class="title__profile" src="assets/fs.jpg">
+                    <img class="title__profile" src="assets/LimeWire AI Studio Asset.jfif">
                 </div>
 
 
@@ -365,22 +365,32 @@
 
             <h2 class="skills__title">Contacto</h2>
             <section class="formcontato" id="contacto">
+
                 <div class="formcontato__contacto">
-                    <div class="part1">
-                        <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
-                        <h3 class="formcontato__subtext2">Complete el siguiente formulario y me pondré en contacto con
-                            usted lo antes posible.</h3>
+                    <div class="row">
+                        <div class="col part1">
+                            <h2 class="formcontato__subtext">¿Quieres contactarme?</h2>
+                            <h2 class="formcontato__subtext2">Complete el siguiente formulario y me pondré en contacto
+                                con
+                                usted lo antes posible.</h2>
+                                <h4 class="formcontato__subtext2">Tambien puede contactarme en redes sociales.</h4>
+                        </div>
+                        <div class="col">
+                            <div class="formcontato__text">
+                                <form class="formcontato__form" name="form">
+                                    <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
+                                    <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
+                                    <input class="formcontato__input" type="text" name="asunto" placeholder="Asunto">
+                                    <textarea class="formcontato__textarea" rows="7" cols="40" id="mensagem"
+                                        name="Mensaje" placeholder="Mensaje"></textarea>
+                                    <button type="submit" class="formcontato__botao">Enviar mensaje</button>
+                                </form>
+                            </div>
+                        </div>
+
                     </div>
-                    <div class="formcontato__text">
-                        <form class="formcontato__form" name="form">
-                            <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
-                            <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
-                            <input class="formcontato__input" type="text" name="asunto" placeholder="Asunto">
-                            <textarea class="formcontato__textarea" rows="7" cols="40" id="mensagem" name="Mensaje"
-                                placeholder="Mensaje"></textarea>
-                            <button type="submit" class="formcontato__botao">Enviar mensaje</button>
-                        </form>
-                    </div>
+
+
                 </div>
             </section>
             <!-- Sección de Footer -->
