--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
             <h3 class="skills__title">Skills</h3>
             <div class="skills__line">
                 <div class="row justify-content-center">
-                    <div class="col-sm-2">
-                        <div class="skills__box">
+                    <div class="col col-sm-6 col-md-2 ">
+                        <div class="skills__box ">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-html5  fa-4x"></i></li>
                                 <li class="skills__name"> HTML 5</li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col col-sm-6 col-md-2 ">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-css3-alt  fa-4x"></i> </li>
@@ -172,7 +172,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col col-sm-6 col-md-2">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-css3-alt  fa-4x"></i></li>
@@ -181,7 +181,7 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col col-sm-6 col-md-2">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-laravel  fa-4x"></i></li>
@@ -189,7 +189,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col col-sm-6 col-md-2">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-bootstrap  fa-4x"></i></li>
@@ -197,7 +197,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col col-sm-6 col-md-2">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-react  fa-4x"></i> </li>
@@ -205,7 +205,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col col-sm-6 col-md-2">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><img id="responsive" src="assets/responsive.svg"> </li>
@@ -214,7 +214,7 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col col-sm-6 col-md-2">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img">
@@ -224,7 +224,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col col-sm-6 col-md-2">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-figma fa-4x"></i></li>
@@ -242,10 +242,10 @@
         <section class="academic" id="formacion">
             <h2 class="academic__title">Formación académica</h2>
             <div class="academic__courses">
-                <div class="academic__courses__box">
+                <div class="academic__courses__box col-10 col-md-3 col-lg-3">
                     <ul class="academic__courses__list">
                         <!-- Pon el logotipo de la institución de formación -->
-                        <li class="academic__courses__item__img"><img style="width: 110px;"
+                        <li class="academic__courses__item__img"><img style="width: 100px;"
                                 src="assets/2f0eWTj8kdz4MqdxZZbW1a3uiYn.svg"></li>
                         <li class="academic__courses__item__title">
                             <h4>Tecnologo en analisis y <br> desarrollo de sistemas</h4>
@@ -255,7 +255,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="academic__courses__box">
+                <div class="academic__courses__box col-10 col-md-3 col-lg-3">
                     <ul class="academic__courses__list">
                         <!--Pon el logotipo de la institución de formación -->
                         <li class="academic__courses__item__img"><img src="assets/googlelogo_light_color_92x30dp.png">
@@ -268,7 +268,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="academic__courses__box">
+                <div class="academic__courses__box col-10 col-md-3 col-lg-3 ">
                     <ul class="academic__courses__list">
                         <!-- Pon el logotipo de la institución de formación -->
                         <li class="academic__courses__item__img"><img src="assets/logo-aluralatam-oracle.svg"></li>
@@ -288,7 +288,7 @@
             <h2 class="experience__section__title">Proyectos</h2>
             <div class="container-fluid">
                 <div class="row justify-content-center">
-                    <div class="col-sm-4">
+                    <div class="col-12 col-md-12 col-lg-4">
                         <div class="experience__box">
                             <img class="experience__img" src="assets/encriptador_web.png">
                             <div class="experience__info">
@@ -306,7 +306,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-12 col-md-12 col-lg-4">
                         <div class="experience__box">
                             <img class="experience__img" src="assets/inicio.png">
                             <div class="experience__info">
@@ -321,7 +321,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-12 col-md-12 col-lg-4">
                         <div class="experience__box">
                             <img class="experience__img" src="assets/d2.png">
                             <div class="experience__info">
@@ -341,7 +341,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <!--           1        2       3 -->
+                    <div class="col-12 col-md-12 col-lg-4">
                         <div class="experience__box">
                             <div class="experience__info">
                                 <img class="experience__img" src="assets/d3.svg">
@@ -368,11 +369,11 @@
 
                 <div class="formcontato__contacto">
                     <div class="row">
-                        <div class="col part1">
+                        <div class=" part1">
                             <h2 class="formcontato__subtext">¿Quieres contactarme?</h2>
                             <h2 class="formcontato__subtext2">Complete el siguiente formulario y me pondré en contacto
                                 con
-                                usted lo antes posible.</h2>
+                                usted lo antes <br>  posible.</h2>
                                 <h4 class="formcontato__subtext2">Tambien puede contactarme en redes sociales.</h4>
                         </div>
                         <div class="col">
