--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Rampart+One&family=Roboto+Condensed:wght@300&family=Wallpoet&display=swap"
         rel="stylesheet">
 
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Code:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -145,7 +147,7 @@
             <div class="about__container">
                 <h3 class="about__title">Sobre mi</h3>
                 <h6 class="about__paragraph">
-                    Soy un desarrollador Front-End apasionado por la tecnología y la creatividad.
+                    Desarrollador Front-End apasionado por la tecnología y la creatividad.
                     Me encanta convertir ideas en experiencias digitales que sean atractivas,
                     intuitivas y fáciles de usar. Tengo experiencia en HTML, CSS, JavaScript y React,
                     ademas tengo experiencia en el desarrollo de aplicaciones web a medida, sitios web responsive
@@ -313,7 +315,7 @@
                         <div class="experience__box">
                             <img class="experience__img" src="assets/inicio.png">
                             <div class="experience__info">
-                                <h3 class="experience__title">APP Reserva Tickets</h3>
+                                <h3 class="experience__title">App Reserva Tickets</h3>
                                 <h4 class="experience__text">Diseño</h4>
                                 <div class="experience__description">
                                     <span class="experience__demo"><a
@@ -328,7 +330,7 @@
                         <div class="experience__box">
                             <img class="experience__img" src="assets/d2.png">
                             <div class="experience__info">
-                                <h3 class="experience__title">Sitio web responsive <br> menu restaurante</h3>
+                                <h3 class="experience__title">Web responsive <br> menu restaurante</h3>
                                 <h4 class="experience__text">Diseño</h4>
                                 <div class="experience__description">
                                     <!-- Pon el enlace del proyecto en Github o GithubPages -->
@@ -377,7 +379,7 @@
                         <h2 class="formcontato__subtext2">Complete el siguiente formulario y me pondré en contacto
                             con
                             usted lo antes <br> posible.</h2>
-                        <h4 class="formcontato__subtext2">Tambien puede contactarme en redes sociales.</h4>
+                        <h4 class="formcontato__subtext2">Tambien me puede contactar en mis redes sociales.</h4>
                     </div>
                     <div class="col">
                         <div class="formcontato__text">
