--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Rampart+One&family=Roboto+Condensed:wght@300&family=Wallpoet&display=swap"
         rel="stylesheet">
 
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Code:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Code:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Orbitron:wght@400..900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 
@@ -101,10 +103,10 @@
         <!-- Sección del Header/Title/Hero -->
         <section class="title">
             <div class="row">
-                <div class="col">
+                <div class="col ">
                     <div class="title">
                         <h2 class="title__bio ">Nestor Canal</h2>
-                        <h1 class="title__bio2 d-flex ml-5">Desarrollador</h1>
+                        <h1 class="title__bio2 ">Desarrollador</h1>
 
                     </div>
                     <div class="title d-flex justify-content-center ">
@@ -115,7 +117,7 @@
 
                     </div>
                 </div>
-                <div class="col d-flex justify-content-center">
+                <div class="col d-flex justify-content-center mv">
                     <img class="title__profile" src="assets/LimeWire AI Studio Asset.jfif">
                 </div>
 
@@ -160,8 +162,8 @@
         <section class="skills" id="skills">
             <h3 class="skills__title">Skills</h3>
             <div class="skills__line">
-                <div class="row justify-content-center">
-                    <div class="col col-sm-6 col-md-2 ">
+                <div class="row ">
+                    <div class="col col-sm-6 col-md-2 mx-auto">
                         <div class="skills__box ">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-html5  fa-4x"></i></li>
@@ -169,7 +171,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col col-sm-6 col-md-2 ">
+                    <div class="col col-sm-6 col-md-2 mx-auto">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-css3-alt  fa-4x"></i> </li>
@@ -177,7 +179,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col col-sm-6 col-md-2">
+                    <div class="col col-sm-6 col-md-2 mx-auto">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-css3-alt  fa-4x"></i></li>
@@ -186,7 +188,7 @@
                         </div>
 
                     </div>
-                    <div class="col col-sm-6 col-md-2">
+                    <div class="col col-sm-6 col-md-2 mx-auto">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-laravel  fa-4x"></i></li>
@@ -194,7 +196,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col col-sm-6 col-md-2">
+                    <div class="col col-sm-6 col-md-2 mx-auto">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-bootstrap  fa-4x"></i></li>
@@ -202,7 +204,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col col-sm-6 col-md-2">
+                    <div class="col col-sm-6 col-md-2 mx-auto">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-react  fa-4x"></i> </li>
@@ -210,7 +212,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col col-sm-6 col-md-2">
+                    <div class="col col-sm-6 col-md-2 mx-auto">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><img id="responsive" src="assets/responsive.svg"> </li>
@@ -219,7 +221,7 @@
                         </div>
 
                     </div>
-                    <div class="col col-sm-6 col-md-2">
+                    <div class="col col-sm-6 col-md-2 mx-auto">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img">
@@ -229,7 +231,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col col-sm-6 col-md-2">
+                    <div class="col col-sm-6 col-md-2 mx-auto">
                         <div class="skills__box">
                             <ul>
                                 <li class="skills__img"><i class="fa-brands fa-figma fa-4x"></i></li>
@@ -245,48 +247,41 @@
 
         <!-- Sección de Formación académica -->
         <section class="academic" id="formacion">
-            <h2 class="academic__title">Formación académica</h2>
-            <div class="academic__courses">
-                <div class="academic__courses__box col-10 col-md-3 col-lg-3">
-                    <ul class="academic__courses__list">
-                        <!-- Pon el logotipo de la institución de formación -->
-                        <li class="academic__courses__item__img"><img style="width: 100px;"
-                                src="assets/2f0eWTj8kdz4MqdxZZbW1a3uiYn.svg"></li>
-                        <li class="academic__courses__item__title">
-                            <h4>Tecnologo en analisis y <br> desarrollo de sistemas</h4>
-                        </li>
-                        <li class="academic__courses__item__subtitle">
-                            <p>2023 - SENA</p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="academic__courses__box col-10 col-md-3 col-lg-3">
-                    <ul class="academic__courses__list">
-                        <!--Pon el logotipo de la institución de formación -->
-                        <li class="academic__courses__item__img"><img src="assets/googlelogo_light_color_92x30dp.png">
-                        </li>
-                        <li class="academic__courses__item__title">
-                            <h4>Formación en Diseño UX</h4>
-                        </li>
-                        <li class="academic__courses__item__subtitle">
-                            <p>2023 - Google</p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="academic__courses__box col-10 col-md-3 col-lg-3 ">
-                    <ul class="academic__courses__list">
-                        <!-- Pon el logotipo de la institución de formación -->
-                        <li class="academic__courses__item__img"><img src="assets/logo-aluralatam-oracle.svg"></li>
-                        <li class="academic__courses__item__title">
-                            <h4>Formación en desarrollo <br> Front-End</h4>
-                        </li>
-                        <li class="academic__courses__item__subtitle">
-                            <p>En curso - Alura</p>
-                        </li>
-                    </ul>
+            <h2 class="academic__title mb-5">Formación académica</h2>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col mb-4">
+                        <div class="academic__courses__box mx-auto">
+                            <img class="card-img-top mt-3" src="assets/2f0eWTj8kdz4MqdxZZbW1a3uiYn.svg" alt="Card image" style="width:30%">
+                            <div class="card-body">
+                                <h4 class="card-title">Tecnólogo en Análisis y Desarrollo de Sistemas</h4>
+                                <p class="card-text text-center">2023 - SENA</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-4">
+                        <div class="academic__courses__box mx-auto">
+                            <img class="card-img-top mt-5" src="assets/googlelogo_light_color_92x30dp.png" alt="Card image" style="width:60%">
+                            <div class="card-body">
+                                <h4 class="card-title">Formación en Diseño UX</h4>
+                                <p class="card-text text-center">2023 - Google</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-4">
+                        <div class="academic__courses__box mx-auto">
+                            <img class="card-img-top mt-5" src="assets/logo-aluralatam-oracle.svg" alt="Card image" style="width:80%">
+                            <div class="card-body">
+                                <h4 class="card-title">Formación en Desarrollo Front-End</h4>
+                                <p class="card-text text-center">En curso - Alura</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        
+        
 
         <!-- Sección de Experiencia Profesional/Proyectos-->
         <section class="experience" id="xp">
