html css mobile

--- a/index.html
+++ b/index.html
@@ -344,23 +344,25 @@
                     <!--           1        2       3 -->
                     <div class="col-12 col-md-12 col-lg-4">
                         <div class="experience__box">
+                            <img class="experience__img" src="assets/fut_web.png">
                             <div class="experience__info">
-                                <img class="experience__img" src="assets/d3.svg">
-                                <h2 class="experience__title">Administrador de torneos</h2>
-                                <h3 class="experience__text">Diseño</h3>
+                                <h3 class="experience__title">Administrador de torneos</h3>
+                                <h4 class="experience__text">Diseño</h4>
                                 <div class="experience__description">
+                                 
                                     <span class="experience__repo"><a
-                                            href="https://www.figma.com/proto/U2lIJZ293jF0uAVHjMSCHM/futbol?type=design&node-id=523-4054&t=vSZxdr6bBD835eKn-1&scaling=min-zoom&page-id=523%3A1823&starting-point-node-id=523%3A4054&show-proto-sidebar=1"
-                                            target="_blank"><button class="experiencia__botao--repo">Ver demo
-                                                web</button></a></span>
-                                    <span class="experience__demo"><a
-                                            href="https://www.figma.com/proto/U2lIJZ293jF0uAVHjMSCHM/futbol?type=design&node-id=407-2147&t=pMDKNXWayo4ocKtV-1&scaling=scale-down&page-id=407%3A494&starting-point-node-id=407%3A2147"
-                                            target="_blank"><button class="experience__botao--demo">Ver demo
-                                                movil</button></a></span>
+                                        href="https://www.figma.com/proto/U2lIJZ293jF0uAVHjMSCHM/futbol?type=design&node-id=523-4054&t=vSZxdr6bBD835eKn-1&scaling=min-zoom&page-id=523%3A1823&starting-point-node-id=523%3A4054&show-proto-sidebar=1"
+                                        target="_blank"><button class="experiencia__botao--repo">Ver demo
+                                            web</button></a></span>
+                                <span class="experience__demo"><a
+                                        href="https://www.figma.com/proto/U2lIJZ293jF0uAVHjMSCHM/futbol?type=design&node-id=407-2147&t=pMDKNXWayo4ocKtV-1&scaling=scale-down&page-id=407%3A494&starting-point-node-id=407%3A2147"
+                                        target="_blank"><button class="experience__botao--demo">Ver demo
+                                            movil</button></a></span>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
 
