--- a/index.html
+++ b/index.html
@@ -290,16 +290,16 @@
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-12 col-lg-4">
                         <div class="experience__box">
-                            <img class="experience__img" src="assets/encriptador_web.png">
+                            <img class="experience__img" src="assets/Captura de pantalla 2024-06-11 120758.png">
                             <div class="experience__info">
-                                <h3 class="experience__title">Encriptador de texto</h3>
-                                <h4 class="experience__text">Challenge Alura Codificador </h4>
+                                <h3 class="experience__title">Organizador de equipos</h3>
+                                <h4 class="experience__text">Organiza tus equipos </h4>
                                 <div class="experience__description">
                                     <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                                    <span class="experience__repo"><a href="https://github.com/nestor2312/encriptador"
+                                    <span class="experience__repo"><a href="https://github.com/nestor2312/org"
                                             target="_blank"><button
                                                 class="experiencia__botao--repo">Repositório</button></a></span>
-                                    <span class="experience__demo"><a href="https://nestor2312.github.io/encriptador/"
+                                    <span class="experience__demo"><a href="https://org-delta-one.vercel.app/"
                                             target="_blank"><button class="experience__botao--demo">Ver
                                                 demo</button></a></span>
                                 </div>
