--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                             <img class="card-img-top mt-5" src="assets/logo-aluralatam-oracle.svg" alt="Card image" style="width:80%">
                             <div class="card-body">
                                 <h4 class="card-title">Formación en Desarrollo Front-End</h4>
-                                <p class="card-text text-center">En curso - Alura</p>
+                                <p class="card-text text-center">2024 - Alura</p>
                             </div>
                         </div>
                     </div>
@@ -288,6 +288,23 @@
             <h2 class="experience__section__title">Proyectos</h2>
             <div class="container-fluid">
                 <div class="row justify-content-center">
+                    <div class="col-12 col-md-12 col-lg-4">
+                        <div class="experience__box">
+                            <img class="experience__img" src="assets/fut_web.png">
+                            <div class="experience__info">
+                                <h3 class="experience__title">Administrador de torneos</h3>
+                                <h4 class="experience__text">Web responsive</h4>
+                                <div class="experience__description">
+                                 
+                                    <span class="experience__repo"><a
+                                        href="http://react-soccer.s3-website.us-east-2.amazonaws.com/"
+                                        target="_blank"><button class="experiencia__botao--repo">Ver demo
+                                            web</button></a></span>
+                                
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-12 col-md-12 col-lg-4">
                         <div class="experience__box">
                             <img class="experience__img" src="assets/Captura de pantalla 2024-06-11 120758.png">
