link portafolio ux

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                     <div class="experience__description">
                      
                         <span class="experience__repo"><a
-                            href="https://www.figma.com/proto/U2lIJZ293jF0uAVHjMSCHM/futbol?type=design&node-id=523-4054&t=vSZxdr6bBD835eKn-1&scaling=min-zoom&page-id=523%3A1823&starting-point-node-id=523%3A4054&show-proto-sidebar=1"
+                            href="https://nestors-portafolio.webflow.io/"
                             target="_blank"><button class="experiencia__botao--repo">Ver proceso de diseño completo</button></a></span>
                    
                     </div>
