--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="col d-flex justify-content-center mv">
-                    <img class="title__profile" src="assets/LimeWire AI Studio Asset.jfif">
+                    <img class="title__profile" src="assets/Gemini_Generated_Image_iunynuiunynuiuny.jfif">
                 </div>
 
 
@@ -410,7 +410,7 @@
                     </div>
                     <div class="col">
                         <div class="formcontato__text">
-                            <form class="formcontato__form" name="form" action="enviar.php" method="post">
+                            <form class="formcontato__form" name="form" action="" method="post">
                                 <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
                                 <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
                                 <input class="formcontato__input" type="text" name="asunto" placeholder="Asunto">
@@ -430,7 +430,7 @@
             <section class="footer">
                 <div class="footer__rodape">
                     <p>Desarrollado por Nestor Canal</p>
-                    <p>© 2024</p>
+                    <p>© 2025</p>
                 </div>
             </section>
     </div>
